--- a/zookeper/1leader-3repl/05-stateful-set-persistent-volume.yaml
+++ b/zookeper/1leader-3repl/05-stateful-set-persistent-volume.yaml
@@ -143,7 +143,7 @@ spec:
             initialDelaySeconds: 10
             timeoutSeconds: 5
           volumeMounts:
-            - name: datadir-volume
+            - name: zookeeper-volume
               mountPath: /var/lib/zookeeper
       # Run as a non-privileged user
       securityContext:
@@ -152,7 +152,7 @@ spec:
   ## Mount either emptyDir via volume or PV of 'storageclass-zookeeper' storageClass
   ## Uncomment what is required
   #      volumes:
-  #      - name: datadir-volume
+  #      - name: zookeeper-volume
   #        emptyDir:
   #          medium: "" #accepted values:  empty str (means node's default medium) or Memory
   #          sizeLimit: 1Gi
@@ -160,7 +160,7 @@ spec:
   ## Uncomment what is required
   volumeClaimTemplates:
     - metadata:
-        name: datadir-volume
+        name: zookeeper-volume
       spec:
         accessModes:
           - ReadWriteOnce
